[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/back_of_bkg.png" type="Texture" id=1]
[ext_resource path="res://assets/bkg.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://InstructionsPanel.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Bkg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ShapesArea" type="Sprite" parent="."]
position = Vector2( 120, 250 )
texture = ExtResource( 2 )
centered = false

[node name="Timer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="InstructionsPanel" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
